# freetype-glpp

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.txt
demos/: .gitignore  CMakeLists.txt
demos/font/: demo-font.c  demo-font.cpp
demos/src/: demo-font.cpp
freetype-gl/: CMakeLists.txt
include/freetype-gl++/: freetype-gl++.hpp  opengl.hpp  shader.hpp  texture-atlas.hpp  texture-font.hpp  vec234.hpp  vertex-buffer.hpp
src/: dummy.cpp  shader.cpp  texture-atlas.cpp  texture-atlas.hpp  texture-font.cpp  vec234.hpp  vertex-buffer.cpp
src/freetype-gl++/: dummy.cpp  vec234.hpp
